fixed bug where svg shrinks on mobile nav bar pull down

--- a/app/assets/stylesheets/components/_mobile.scss
+++ b/app/assets/stylesheets/components/_mobile.scss
@@ -24,7 +24,7 @@
     }   
   }  
 
-  .mobile{
+  .mobile-img{
     min-width: 185px;
     width: 30%;
     margin-top: 50px;
